# Econ_API_Bridge

./: README.md  pyproject.toml  response_bis.txt  setup.py
api_caller/banxico/: sie.py
api_caller/baseapi/: baseapi.py
api_caller/bis/: bis.py
api_caller/fed/: fed.py
api_caller/inegi/: bie.py  denue.py
api_caller/wrldbank/: wrldbank.py
econ_api_bridge/banxico/: __init__.py  sie.py
econ_api_bridge/bis/: __init__.py  bis.py
econ_api_bridge/fed/: __init__.py  fed.py
econ_api_bridge/inegi/: __init__.py  bie.py  denue.py
econ_api_bridge/wrldbank/: wrldbank.py
examples/: example_banxico.py  example_bis.py  example_fred.py  example_inegi.py
