[project]
name = "api-caller"
version = "0.1.0"
description = "API_Caller es un conjunto de funciones diseñadas para facilitar la conexión con distintas APIs y obtener información económica, estadística y financiera de diversas fuentes. Este proyecto permite automatizar la extracción de datos y estructurarlos de manera eficiente para su análisis y uso en distintos entornos."
authors = [
    {name = "SpiderCoop",email = "david.jimenez.cooper@gmail.com"}
]
license = "Apache 2.0"
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "certifi (==2025.1.31)",
    "charset-normalizer (==3.4.1)",
    "idna (==3.10)",
    "numpy (==2.2.3)",
    "pandas (==2.2.3)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.0.1)",
    "pytz (==2025.1)",
    "requests (==2.32.3)",
    "setuptools (==75.8.0)",
    "six (==1.17.0)",
    "tzdata (==2025.1)",
    "urllib3 (==2.3.0)",
    "wheel (==0.45.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
